--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ main{
 @media (max-width: 480px) {
   .right-container h2,
   .left-container h2 {
-    font-size: 80pt;
+    font-size: 60pt;
     padding:2px;
     line-height: 1.2;
   }
@@ -274,7 +274,7 @@ main{
   }
 
   .img-container {
-    height: 900px;
+    height:600px;
   }
 }
 
@@ -326,8 +326,8 @@ main{
 /* Extra small devices */
 @media (max-width: 480px) {
   .home-img {
-    width: 130vw;  /* take most of the screen width */
-    top: 40%
+    width: 110vw;  /* take most of the screen width */
+    top: 65%
   }
 }
 
@@ -522,15 +522,20 @@ main{
   }
 
    .elements{
-    top: 155%;
+    top: 110%;
 
   }
 
 
 .element2 {
-    top: 205%;
+    top: 160%;
   
 }
+ .tape{
+    position: absolute;
+    top: 100%;
+
+  }
 }
 
 /* Extra small devices (phones) */
@@ -553,6 +558,8 @@ main{
     width: 12rem;
     margin: 5px auto;
   }
+
+
 }
 
 .featured-works {
@@ -582,6 +589,8 @@ main{
   body {
     background-color: lightblue;
   }
+
+ 
 }
 
 .marquee {
@@ -618,5 +627,33 @@ main{
    position: absolute;
    z-index: 99;
    top: 170%;
+ }
+
+ @media (max-width: 480px) {
+  
+.tape{
+   min-width: auto;
+   height: 50%;
+   position: absolute;
+   z-index: 99;
+   top: 155%;
+
+ }
+ .marquee {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  position: absolute;
+  z-index: 999;
+  top: 176%;
+}
+ .marquee p {
+  font-size: 20pt;
+  animation: scroll 15s linear infinite;
+  color: white;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding-right: 100%; /* space between loops */
+}
  }
 
